Closed Bug 326035 Opened 19 years ago Closed 17 years ago

Page Up and Page Down do not hide cursor

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: bugzilla-graveyard, Assigned: markus)

Details

(Keywords: verified1.8.1.12)

Attachments

(1 file)

Standard Mac OS behaviour is to hide the cursor when scrolling through a page with the keyboard. We do the Right Thing(tm) for the arrow keys, Home, and End, but for some reason, we don't hide the cursor when scrolling with Page Up or Page Down.
Mass-reassign of bugs still assigned to pinkerton to nobody; filter on "NoMoPinkBugsInCamino".
Assignee: mikepinkerton → nobody
QA Contact: general
I've been annoyed by this for quite some time, so here's a fix. Not sure who to ask for a review, so starting with Chris who reported this. Feel free to point me to someone else if appropriate. Also, I am not familiar with the widget code; obviously someone explicitly put in those checks for page up/down keys, and I can't figure out why. Hopefully because hiding the cursor on page scroll wasn't standard behaviour at that time, and someone just forgot to change it later on.
Attachment #295099 - Flags: review?(cl-bugs)
Comment on attachment 295099 [details] [diff] [review] Hide cursor when scrolling with Page Up/Down Josh would be a better guy to ask for review in Cocoa widget code. cbarrett might also have something useful to say. I'm not even sure I'm eligible to review Cocoa widget code, but regardless, I definitely don't feel comfortable doing so since it can potentially affect a lot more than just Camino now that Firefox is using it too.
Attachment #295099 - Flags: review?(cl-bugs) → review?(joshmoz)
And since this appears to be a Cocoa widget bug, not strictly a Camino bug, I'm kicking it to Core.
Assignee: nobody → joshmoz
Component: General → Widget: Cocoa
Product: Camino → Core
QA Contact: general → cocoa
CVS blame for that line doesn't mention anything interesting. It was last touched by josh for the mega-cleanup patch in bug 383560. AFAICS this change makes sense even in the XUL world.
--> Markus
Assignee: joshmoz → markus.magnuson
Attachment #295099 - Flags: superreview?(roc)
Attachment #295099 - Flags: review?(joshmoz)
Attachment #295099 - Flags: review+
Comment on attachment 295099 [details] [diff] [review] Hide cursor when scrolling with Page Up/Down It's been there since the beginning of time.
Attachment #295099 - Flags: superreview?(roc) → superreview+
Comment on attachment 295099 [details] [diff] [review] Hide cursor when scrolling with Page Up/Down (In reply to comment #7) > It's been there since the beginning of time. Yeah... hyatt added this in revision 1.16 of this file (line 2303), with a bunch of other code and the description "Implement key events in cocoa. Rough, but works. Not part of build." I guess it worked for this long... Camino would like to get this fix on the branch as well. It's simple and straightforward and NPOTB on branch since Firefox doesn't use widget/cocoa.
Attachment #295099 - Flags: approval1.8.1.12?
Comment on attachment 295099 [details] [diff] [review] Hide cursor when scrolling with Page Up/Down Oh, right. I guess I should request trunk approval too...
Attachment #295099 - Flags: approval1.9?
Attachment #295099 - Flags: approval1.9? → approval1.9+
I'll check this in for Markus once the Firefox tree is no longer red.
Checking in widget/src/cocoa/nsChildView.mm; /cvsroot/mozilla/widget/src/cocoa/nsChildView.mm,v <-- nsChildView.mm new revision: 1.291; previous revision: 1.290 done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Thank you !
Target Milestone: --- → mozilla1.9 M11
Comment on attachment 295099 [details] [diff] [review] Hide cursor when scrolling with Page Up/Down approved for 1.8.1.12, a=dveditz for release-drivers
Attachment #295099 - Flags: approval1.8.1.12? → approval1.8.1.12+
Checked in on the MOZILLA_1_8_BRANCH for Markus: Checking in widget/src/cocoa/nsChildView.mm; /cvsroot/mozilla/widget/src/cocoa/nsChildView.mm,v <-- nsChildView.mm new revision: 1.120.2.18; previous revision: 1.120.2.17 done Thanks, Markus!
Keywords: fixed1.8.1.12
This works in the latest trunk, but it does not work in: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; fr; rv:1.8.1.12) Gecko/2008012822 Firefox/2.0.0.12 Cursor still shows when doing Page Up and Page Down. Removing the "fixed1.8.1.12" keyword.
Keywords: fixed1.8.1.12
Juan, this is a Cocoa widget bug, so on the 1_8 branch you must use a Camino build to verify this, not a Firefox (Widget:Mac) build. Restoring the fixed1.8.1.12 keyword.
Keywords: fixed1.8.1.12
This works in Camino Version 1.6b3pre (1.8.1.12pre 2008013001). Changed keyword to "verified1.8.1.12"
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: