Bug 326035 - Page Up and Page Down do not hide cursor. Patch by Markus Magnuson <markus.magnuson@gmail.com>, r=josh, sr=roc, a/1.9=schrep